# alloy

./: Cargo.toml
crates/alloy/: Cargo.toml
crates/alloy-adapters/onebot/: Cargo.toml
crates/alloy-adapters/onebot/src/: adapter.rs  api_caller.rs  bot.rs  config.rs  extractors.rs  lib.rs  traits.rs
crates/alloy-adapters/onebot/src/model/: api.rs  event.rs  message.rs  mod.rs  segment.rs  types.rs
crates/alloy-adapters/onebot/src/model/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs
crates/alloy-core/: Cargo.toml
crates/alloy-core/src/: adapter.rs  bot.rs  bridge.rs  context.rs  error.rs  event.rs  lib.rs  message.rs
crates/alloy-core/src/foundation/: context.rs  error.rs  event.rs  message.rs  mod.rs
crates/alloy-core/src/framework/: dispatcher.rs  extractor.rs  handler.rs  matcher.rs  matcher_builders.rs  mod.rs  service.rs
crates/alloy-core/src/integration/: adapter.rs  bot.rs  capability.rs  mod.rs  transport.rs
crates/alloy-core/src/transport/: capability.rs  config.rs  connection.rs  mod.rs
crates/alloy-framework/: Cargo.toml
crates/alloy-framework/src/: command.rs  context.rs  dispatcher.rs  error.rs  extractor.rs  handler.rs  lib.rs  manager.rs  matcher.rs  matcher_builders.rs  routing.rs  service.rs
crates/alloy-framework/src/command/: extractor.rs  layer.rs  mod.rs  segment.rs  split.rs
crates/alloy-framework/src/extractor/: bot.rs  core.rs  event.rs  mod.rs  plugin.rs
crates/alloy-framework/src/handler/: builder.rs  mod.rs  service.rs  traits.rs
crates/alloy-framework/src/plugin/: config.rs  core.rs  descriptor.rs  extractor.rs  macros.rs  mod.rs  registry.rs  service_ref.rs
crates/alloy-framework/src/plugin/builtin/: mod.rs  storage.rs
crates/alloy-macros/: Cargo.toml
crates/alloy-macros/src/: capability.rs  event.rs  lib.rs  plugin.rs
crates/alloy-runtime/: Cargo.toml
crates/alloy-runtime/src/: bot.rs  error.rs  lib.rs  logging.rs  registry.rs  runtime.rs
crates/alloy-runtime/src/config/: error.rs  loader.rs  mod.rs  schema.rs  validation.rs
crates/alloy-transport/: Cargo.toml
crates/alloy-transport/src/: http_client.rs  lib.rs  server.rs  ws_client.rs
crates/alloy-transport/src/http/: client.rs  mod.rs  server.rs
crates/alloy-transport/src/websocket/: client.rs  mod.rs  server.rs
crates/alloy/src/: lib.rs
examples/echo_bot/: Cargo.toml  README.md  alloy.toml  alloy.yaml
examples/echo_bot/src/: main.rs
examples/storage/: Cargo.toml
examples/storage/src/: extractor.rs  lib.rs  service.rs
