[package]
name = "alloy-core"
version = { workspace = true }
description = "Core engine for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
linkme = "0.3.35"
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
