[package]
name = "alloy-framework"
version = { workspace = true }
description = "High-level framework components for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

command = ["dep:clap"]

[dependencies]
alloy-core = { path = "../alloy-core" }
async-trait = "0.1.89"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros"] }
tower = { version = "0.5.3", features = ["filter"] }
tower-layer = "0.3.3"
tracing = "0.1.44"

[dependencies.clap]
version = "4.5.58"
default-features = false
features = ["error-context", "help", "std", "usage"]
optional = true

[dev-dependencies]
serde_json = "1.0.149"
tokio-test = "0.4.5"
