[package]
name = "alloy-framework"
version = { workspace = true }
description = "High-level framework components for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["builtin"]

command = ["dep:clap"]
builtin = []

[dependencies]
alloy-core = { path = "../alloy-core" }
async-trait = "0.1.89"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync", "fs"] }
tower = { version = "0.5.3", features = ["filter", "util"] }
tower-layer = "0.3.3"
tracing = "0.1.44"

[dependencies.clap]
version = "4.5.58"
default-features = false
features = ["error-context", "help", "std", "usage"]
optional = true

[dev-dependencies]
serde_json = "1.0.149"
tokio-test = "0.4.5"
