[package]
name = "alloy-framework"
version = { workspace = true }
description = "High-level framework components for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

command = ["dep:clap"]

[dependencies]
alloy-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tower = { version = "0.5.3", features = ["filter", "util"] }
tower-layer = "0.3.3"
tracing = { workspace = true }

[dependencies.clap]
version = "4.5.60"
default-features = false
features = ["error-context", "help", "std", "usage"]
optional = true

[dev-dependencies]
tokio-test = "0.4.5"
