[package]
name = "alloy-macros"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full", "parsing", "extra-traits"] }
