[package]
name = "alloy-macros"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.115", features = ["extra-traits"] }
