[package]
name = "alloy-runtime"
version = { workspace = true }
description = "Runtime orchestration layer for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

# Logging features
json = ["tracing-subscriber/json"]

# Transport features (passed through to alloy-transport)
ws-client = ["alloy-transport/ws-client"]
ws-server = ["alloy-transport/ws-server"]
http-client = ["alloy-transport/http-client"]
http-server = ["alloy-transport/http-server"]
full-transport = ["alloy-transport/full"]

[dependencies]
alloy-core = { path = "../alloy-core" }
alloy-framework = { path = "../alloy-framework" }
alloy-transport = { path = "../alloy-transport" }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
