[package]
name = "alloy-runtime"
version = { workspace = true }
description = "Runtime orchestration layer for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

# Logging features
json = ["tracing-subscriber/json"]

# Transport features (passed through to alloy-transport)
ws-client = ["alloy-transport/ws-client"]
ws-server = ["alloy-transport/ws-server"]
http-client = ["alloy-transport/http-client"]
http-server = ["alloy-transport/http-server"]
full-transport = ["alloy-transport/full"]

[dependencies]
alloy-core = { workspace = true }
alloy-framework = { workspace = true }
alloy-transport = { workspace = true }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
