[package]
name = "alloy-runtime"
version = { workspace = true }
description = "Runtime orchestration layer for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

# Config format features
toml-config = ["figment/toml"]
yaml-config = ["figment/yaml"]

# Logging features
json-log = ["tracing-subscriber/json"]

[dependencies]
alloy-core = { workspace = true }
alloy-framework = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
