[package]
name = "alloy-transport"
version = { workspace = true }
description = "Network transport layer for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

# Transport types
http-client = ["dep:reqwest"]
http-server = ["dep:axum"]
ws-client = ["dep:tokio-tungstenite"]
ws-server = ["dep:axum", "dep:tokio-tungstenite"]

# Convenience feature groups
full = ["http-client", "http-server", "ws-client", "ws-server"]

[dependencies]
alloy-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tracing = { workspace = true }

axum = { version = "0.8.8", features = ["ws"], optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"], optional = true }
