[package]
name = "alloy-transport"
version = { workspace = true }
description = "Network transport layer for the Alloy bot framework"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []

# Transport types
http-client = ["dep:reqwest"]
http-server = ["dep:axum"]
ws-client = ["dep:tokio-tungstenite"]
ws-server = ["dep:axum", "axum/ws"]

# Convenience feature groups
full = ["http-client", "http-server", "ws-client", "ws-server"]

[dependencies]
alloy-core = { workspace = true }
alloy-macros = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

axum = { version = "0.8.8", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"], optional = true }
