[package]
name = "alloy"
version = { workspace = true }
description = "A high-performance, highly decoupled, and type-safe bot framework for Rust"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
# Core dependencies (always required, includes Tower integration)
alloy-core = { workspace = true }
alloy-framework = { workspace = true }
alloy-runtime = { workspace = true }

[features]
default = ["command", "toml-config"]

# Structured command support
command = ["alloy-framework/command"]

# Built-in plugin support
builtin-plugins = ["alloy-framework/builtin-plugins"]

# Config format features
toml-config = ["alloy-runtime/toml-config"]
yaml-config = ["alloy-runtime/yaml-config"]

# Logging features
json-log = ["alloy-runtime/json-log"]

# Transport features (passed through to runtime)
ws-client = ["alloy-runtime/ws-client"]
ws-server = ["alloy-runtime/ws-server"]
http-client = ["alloy-runtime/http-client"]
http-server = ["alloy-runtime/http-server"]
full-transport = ["alloy-runtime/full-transport"]
