[package]
name = "alloy"
version = { workspace = true }
description = "A high-performance, highly decoupled, and type-safe bot framework for Rust"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
alloy-core = { workspace = true }
alloy-framework = { workspace = true }
alloy-macros = { workspace = true }
alloy-runtime = { workspace = true, optional = true }
alloy-transport = { workspace = true }

[features]
default = ["command", "runtime", "toml-config"]

# Structured command support
command = ["alloy-framework/command"]

# Runtime support
runtime = ["dep:alloy-runtime"]

# Config format features
toml-config = ["alloy-runtime/toml-config"]
yaml-config = ["alloy-runtime/yaml-config"]

# Logging features
json-log = ["alloy-runtime/json-log"]

# Transport features
ws-client = ["alloy-transport/ws-client"]
ws-server = ["alloy-transport/ws-server"]
http-client = ["alloy-transport/http-client"]
http-server = ["alloy-transport/http-server"]
full-transport = ["alloy-transport/full"]
