[package]
name = "echo-bot"
version = "0.1.0"
edition = "2024"
authors = ["XeF2 <contact@xef2.top>"]
license = "MPL-2.0"
description = "A simple echo bot example for the Alloy framework"
publish = false

[dependencies]
alloy = { path = "../../crates/alloy", features = ["ws-server", "builtin-plugins"] }
alloy-adapter-onebot = { path = "../../crates/alloy-adapters/onebot" }
anyhow = "1.0.102"
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["local-offset", "macros"] }
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.44"
clap = { version = "4.5.60", features = ["derive"] }
